# parking-division-api

./: .env.example  .gitignore  DATABASE_GUIDE.md  OVERVIEW.md  PROJECT_SUMMARY.md  Pipeline - Update Occupancy Between Two Dates.ipynb  QUICK_START.md  README.md  START_HERE.md  pyproject.toml  requirements.txt  start.sh
app/: config.py  main.py
app/api/: dependencies.py
app/api/v1/: api.py
app/db/: session.py
app/models/: database.py  schemas.py
app/schema_viz/: README.md  cli.py  mermaid.py  models.py  webapp.py
app/schema_viz/templates/: base.html  index.html  table_detail.html
app/static/: admin.js  cash_variance.js  cityworks.js
app/templates/: admin.html  admin_landing.html  analytics_landing.html  base.html  cash_variance.html  cityworks.html  cityworks_detail.html  cityworks_landing.html  dashboard.html  enforcement_landing.html  file_status.html  gis_cityworks_capacity_story_v3.html  index.html  operations_landing.html  parking_division_efficiency_gains_v3.html  reports.html  revenue_landing.html  revenue_report.html  schedule_editor.html  schedule_manager.html  schedule_view.html  settle_by_source.html  settle_report.html  special_events.html  tdm_landing.html  time_off_requests.html  upload.html
app/utils/: auth.py  etl_cache.py  etl_processor.py  file_inference.py  functions.py  schedule_solver.py  transaction_processor.py
app/utils/sql_templates/: ips_cash_failed.sql  ips_cash_main.sql  ips_cc_failed.sql  ips_cc_main.sql  ips_failed.sql  ips_main.sql  ips_mobile_failed.sql  ips_mobile_main.sql  payments_insider_payments_main.sql  payments_insider_sales_failed.sql  payments_insider_sales_main.sql  windcave_failed.sql  windcave_main.sql
assets/: Permits - Predict if Permit Will Show on a Day.ipynb  Pipeline - Update Occupancy Between Two Dates v3.ipynb  PresenceSpmHistory_schema.csv  occupancy_summary.py  occupancy_summary_incremental.py  original_query.sql  payments_sample.csv  payments_schema.csv  presencespmhistory_sample.csv  transactions.csv  transactions_table_schema.csv  visit_pairs.sql
schema_viz/schema_viz/: requirements.txt  test_synthetic.py
scripts/: create_data_lake_tables.sql  seed_data.py
(+24 files in other folders)
