[project]
name = "parking-transaction-system"
version = "1.0.0"
description = "Parking Division Transaction Management System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "pandas>=2.1.3",
    "openpyxl==3.1.2",
    "pyodbc>=5.0.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt>=4.1.1",
    "python-dotenv==1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator==2.1.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "python-dateutil==2.8.2",
    "keyring>=24.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"