[project]
name = "parking-division-api"
version = "1.0.0"
description = "Parking Division Operations & Revenue Tracking System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # FastAPI and server
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "jinja2>=2.11,<3.0",
    "markupsafe==2.0.1",
    
    # Database
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "pyodbc>=4.0.0",
    
    # Data processing
    "pandas==2.1.3",
    "openpyxl==3.1.2",
    "numpy>=1.24.0",
    
    "charset-normalizer==3.4.4",
    "requests==2.32.5",
    "urllib3==2.6.3",

    # Authentication & Security
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==3.2.2",  # Use 3.2.2 - fully compatible with passlib 1.7.4
    "python-dotenv==1.0.0",
    
    # Validation
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "email-validator==2.1.0",
    
    # Date/Time
    "python-dateutil==2.8.2",
    
    # PDF processing
    "pdf2image>=1.16.0",
    
    # GIS/Spatial (for cityworks integration)
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "fiona>=1.9.0",
    "pyproj>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = []